tests/apparmor/gatekeeper.yaml
../../submodules/gatekeeper-library/library/pod-security-policy/apparmor/samples/psp-apparmor/constraint.yaml
