tests/apparmor/kyverno.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psp-apparmor
spec:
  validationFailureAction: Enforce
  rules:
    - name: app-armor
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: >-
          Specifying other AppArmor profiles is disallowed. The annotation
          container.apparmor.security.beta.kubernetes.io must not be defined,
          or must not be set to anything other than `runtime/default`.
        pattern:
          metadata:
            =(annotations):
              =(container.apparmor.security.beta.kubernetes.io/*): "runtime/default"
